# TODO Use meson's -Db_coverage option?
# option('code-coverage', type: 'boolean', value: false, description: 'Enable code coverage')
# TODO Use meson's -Db_sanitize option?
# option('sanitizer-address', type: 'boolean', value: false, description: 'Enable the Address Sanitizer')
# option('sanitizer-memory', type: 'boolean', value: false, description: 'Enable the Memory Sanitizer')
# option('sanitizer-thread', type: 'boolean', value: false, description: 'Enable the Thread Sanitizer')
# option('sanitizer-leak', type: 'boolean', value: false, description: 'Enable the Leak Sanitizer')
# option('sanitizer-undefined', type: 'boolean', value: false, description: 'Enable the Undefined Behavior Sanitizer')
# TODO Use meson's -Db_lto* options?
# option('lto', type: 'combo', choices: ['yes', 'no', 'thin', 'auto'], value: 'no', description: 'Enable link-time optimization')
