SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geobackend \
	geoipbackend \
	gmysqlbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	lmdbbackend \
	luabackend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	cassandrabackend \
	tinydnsbackend
