SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geoipbackend \
	gmysqlbackend \
	godbcbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	luabackend \
	lua2backend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
